fixed overflow error

--- a/css/styles.css
+++ b/css/styles.css
@@ -129,6 +129,7 @@ html {
     color: white;
     font-size: 20px;
     margin-bottom: 1vh;
+    overflow: hidden;
 }
 
 
